<resources>
    <string name="app_name">Films</string>

    <!--NOTIFICATION CHANNELS-->
    <string name="channel_reminders_name">Movie Reminders</string>
    <string name="channel_reminders_description">Reminders for movie release dates</string>

    <!--NOTIFICATIONS-->
    <plurals name="notification_title_movie_released">
        <item quantity="one">%d New Movie Released</item>
        <item quantity="other">%d New Movies Released</item>
    </plurals>

    <!--FORMS-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!--BUTTONS-->
    <string name="btn_retry">Retry</string>
    <string name="btn_view_all">View All</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_create">Create</string>
    <string name="btn_save">Save</string>
    <string name="btn_new_list">+ New List</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_forgot_password">Forgot Password</string>

    <!--ERROR-->
    <string name="error_loading_home">Error loading home</string>
    <string name="error_loading_lists">Error loading lists</string>
    <string name="error_network">Network error. Please check your connection</string>
    <string name="error_server">Server error. Please wait and try again</string>
    <string name="error_generic">An error occurred. Please wait and try again</string>

    <!--MAIN-->
    <string name="menu_item_home">Home</string>
    <string name="menu_item_lists">Lists</string>
    <string name="menu_item_profile">Profile</string>
    <string name="search_movies">Search Movies</string>

    <!--HOME-->
    <string name="label_new_releases">New Releases</string>
    <string name="label_upcoming">Upcoming</string>
    <string name="label_movie_subreddit">r/movies</string>
    <plurals name="number_comments_source">
        <item quantity="one">%d comment · %s</item>
        <item quantity="other">%d comments · %s</item>
    </plurals>
    <string name="create_reminder_success">Reminder created</string>

    <!--USER LISTS-->
    <string name="label_lists">Lists</string>
    <string name="next_reminder">Next Reminder</string>
    <plurals name="number_movies">
        <item quantity="one">%d movie</item>
        <item quantity="other">%d movies</item>
    </plurals>
    <string name="no_reminders">No reminders</string>
    <string name="empty_user_lists">You have not created any lists</string>

    <!--MOVIE LIST-->
    <string name="empty_movie_list">Add movies to this list</string>
    <string name="watched_count">%1$d/%2$d</string>
    <string name="movie_delete">Remove</string>
    <string name="movie_share">Share</string>
    <string name="movie_add_to_list">Add to list</string>
    <string name="format_playtime">%s playtime</string>
    <string name="movie_list_delete">Delete</string>
    <string name="movie_list_rename">Rename</string>
    <string name="movie_set_watched">Set Watched</string>
    <string name="movie_set_unwatched">Set Not Watched</string>
    <string name="movie_list_deleted">List deleted!</string>

    <!--PROFILE-->
    <string name="option_stats_title">Statistics</string>
    <string name="option_stats_description">Statistics on movies watched</string>
    <string name="option_logout_title">Logout</string>
    <string name="option_logout_description">Close session for user</string>
    <string name="option_comment_title">Comment</string>
    <string name="option_comment_description">Send us any suggestions or comments</string>
    <string name="option_about_title">About</string>
    <string name="option_about_description">General app information</string>
    <string name="format_date_joined">joined %s</string>

    <!--SEARCH-->
    <string name="format_movie_title_year">%1$s (%2$s)</string>
    <string name="no_search_results">No movie results</string>

    <!--SELECT LIST-->
    <string name="add_movie_to">Add movie to…</string>
    <string name="add_movie_to_list_success">Added movie to list!</string>

    <!--EDIT LIST-->
    <string name="create_list_title">New List</string>
    <string name="edit_list_title">Edit List</string>
    <string name="hint_list_title">Title</string>
    <string name="save_list_success">List saved!</string>

    <!--REMINDERS-->
    <string name="title_reminders">Reminders</string>
    <string name="empty_reminders">No reminders</string>
    <string name="delete_reminder_success">Reminder deleted!</string>

    <!--AUTH MENU-->
    <string name="auth_menu_description">Sign up or login to manage movie lists and access other features</string>

    <!--SIGN UP-->
    <string name="sign_up_title">Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_account">Already have an account? Log in</string>

    <!--LOG IN-->
    <string name="login_title">Log in</string>
    <string name="login_message">Welcome back</string>

</resources>
