<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            android:id="@+id/layoutToolbar"
            layout="@layout/dark_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium">

        <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:text="@string/app_name"/>

        <ImageView
                android:id="@+id/imgLogoBackground"
                android:layout_width="320dp"
                android:layout_height="320dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAppName"
                app:layout_constraintBottom_toTopOf="@+id/textDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/bg_circle"/>
        <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAppName"
                app:layout_constraintBottom_toTopOf="@+id/textDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_logo"/>

        <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                android:layout_marginBottom="@dimen/spacing_large"
                android:gravity="center"
                android:text="@string/auth_menu_description"/>

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_log_in"
                android:layout_marginTop="@dimen/spacing_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnLogin"
                app:layout_constraintTop_toTopOf="@+id/btnLogin"
                style="@style/Button.Borderless.Colored"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>