<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            android:id="@+id/layoutToolbar"
            layout="@layout/dark_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium">

        <TextView
                android:id="@+id/textCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputLayoutEmail"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/login_message"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@+id/inputLayoutPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail"
                app:layout_constraintBottom_toTopOf="@+id/btnForgotPassword"
                android:layout_marginTop="@dimen/spacing_medium"
                app:passwordToggleEnabled="true"
                android:hint="@string/hint_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Button.Borderless.Colored"
                android:layout_marginTop="@dimen/spacing_medium"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                android:text="@string/btn_forgot_password"
                app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword"/>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                style="@style/Widget.AppCompat.ProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_large"
                android:visibility="invisible"
                tools:visibility="visible"/>

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_log_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/spacing_medium"
                android:enabled="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>