<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            android:id="@+id/layoutToolbar"
            layout="@layout/dark_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium">

        <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textCreateAccount"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_logo"/>

        <TextView
                android:id="@+id/textCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                app:layout_constraintBottom_toTopOf="@+id/inputLayoutEmail"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/create_an_account"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@+id/inputLayoutPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                android:layout_marginTop="@dimen/spacing_medium"
                app:passwordToggleEnabled="true"
                android:hint="@string/hint_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                style="@style/Widget.AppCompat.ProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                android:layout_marginTop="@dimen/spacing_large"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible"/>

        <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                app:layout_constraintBottom_toTopOf="@+id/textAlreadyHaveAccount"
                android:layout_marginTop="@dimen/spacing_medium"
                android:enabled="false"/>

        <TextView
                android:id="@+id/textAlreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/already_have_account"
                android:background="?selectableItemBackground"
                android:padding="@dimen/spacing_normal"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>